# elusiv

./: .bashrc  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Id.toml  Makefile  README.md  SECURITY.md  Token.toml  build.sh  docker_test.sh  package-lock.json  package.json  recover.json  vkey.sh
.github/workflows/: audit.yaml  clippy.yaml  test.yaml  vkey.yaml
elusiv/: Cargo.toml  Id.toml  Token.toml
elusiv-computation/: Cargo.toml
elusiv-computation/src/: lib.rs
elusiv-derive/src/: borsh_serde_sized.rs  elusiv_instruction.rs  jit.rs  lib.rs  utils.rs
elusiv-interpreter/: Cargo.toml  README.md
elusiv-interpreter/src/: grammar.rs  interpreter.rs  lib.rs  parser.rs  storage.rs
elusiv-macro-tests/: Cargo.toml
elusiv-macro-tests/src/: lib.rs
elusiv-macros/: Cargo.toml
elusiv-macros/src/: elusiv_account.rs  elusiv_instruction.rs  lib.rs  serde.rs  utils.rs
elusiv-mt/: Cargo.toml
elusiv-mt/src/: lib.rs  mmt.rs  mt.rs
elusiv-proc-macros/: Cargo.toml
elusiv-proc-macros/src/: elusiv_account.rs  elusiv_hash_compute_units.rs  for_loop.rs  lib.rs  parse_tokens.rs  repeat.rs  utils.rs
elusiv-setup/: Cargo.toml
elusiv-setup/src/: error.rs  lib.rs
elusiv-utils/: Cargo.toml
elusiv-utils/src/: lib.rs
elusiv-warden-network/: Cargo.toml  Id.toml
elusiv-warden-network/modules/: elusiv-proc-macros
elusiv-warden-network/src/: apa.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  network.rs  operator.rs  processor.rs  proposal.rs  warden.rs
elusiv-warden-network/src/processor/: accounts.rs  apa.rs  apa_warden.rs  basic_warden.rs  mod.rs  operator.rs  utils.rs
elusiv-warden-network/tests/: apa.rs  basic_warden.rs  common.rs
elusiv/elusiv-interpreter/: Cargo.toml
elusiv/elusiv-interpreter/src/: grammar.rs  interpreter.rs  lib.rs  parser.rs  storage.rs
elusiv/modules/: elusiv-computation  elusiv-derive  elusiv-interpreter  elusiv-utils
elusiv/src/: buffer.rs  bytes.rs  commitment.rs  entrypoint.rs  error.rs  fields.rs  instruction.rs  lib.rs  macros.rs  map.rs  proof.rs  token.rs  types.rs
elusiv/src/commitment/: mod.rs  poseidon_constants.rs  poseidon_hash.rs
elusiv/src/processor/: accounts.rs  commitment.rs  mod.rs  proof.rs  utils.rs  vkey.rs
elusiv/src/proof/: mod.rs  precompute.rs  test_proofs.rs  verifier.rs  vkey.rs
elusiv/src/proof/test_vkeys/migrate_unary/: verification_key.json
elusiv/src/proof/vkey/: vkey_migrate.rs  vkey_send.rs  vkey_test.rs
elusiv/src/proof/vkeys/migrate_unary/: elusiv_vkey
elusiv/src/proof/vkeys/send_quadra/: verification_key.json
elusiv/src/state/: commitment.rs  fee.rs  governor.rs  metadata.rs  mod.rs  nullifier.rs  program_account.rs  proof.rs  queue.rs  storage.rs  tree.rs  vkey.rs
elusiv/tests/: accounts.rs  commitment.rs  common.rs  verification.rs
elusiv/tests/common/: log.rs  mod.rs
elusiv_account/: Cargo.toml
elusiv_account/src/: account.rs  available_types.rs  elusiv_account.rs  elusiv_instruction.rs  lib.rs
elusiv_macros/: Cargo.toml
elusiv_macros/src/: account.rs  available_types.rs  elusiv_account.rs  elusiv_instruction.rs  lib.rs  serializable.rs  utils.rs
optimization/: cu-log.txt  final_exponentiation.py  log_to_cus.py  miller_loop.py  miller_loop_rounds.py  optimize_distribution.py  prepare_inputs.py
poseidon/: Cargo.toml
poseidon/src/: poseidon_constants.rs  poseidon_hash.rs  scalar.rs
scripts/: test.sh
setup/shell/: ui.sh
setup/src/: main.ts  setup.ts  utils.ts
shared/elusiv-computation/src/: lib.rs
shared/elusiv-derive/: Cargo.toml
shared/elusiv-derive/src/: borsh_serde_sized.rs  elusiv_instruction.rs  enum_variant.rs  jit.rs  lib.rs  map_pda_account.rs  pda_account.rs  utils.rs
shared/elusiv-interpreter/: Cargo.toml
shared/elusiv-interpreter/src/: parser.rs
shared/elusiv-proc-macro-utils/: Cargo.toml
shared/elusiv-proc-macro-utils/src/: lib.rs
shared/elusiv-proc-macros/: Cargo.toml
shared/elusiv-proc-macros/src/: elusiv_account.rs  elusiv_hash_compute_units.rs  lib.rs  parse_tokens.rs  program_id.rs  repeat.rs  utils.rs
shared/elusiv-test/: Cargo.toml
shared/elusiv-test/mock-program/: Cargo.toml
shared/elusiv-test/mock-program/src/: lib.rs
shared/elusiv-test/src/: lib.rs
shared/elusiv-types/: Cargo.toml  Token.toml
shared/elusiv-types/src/: accounts.rs  bytes.rs  lib.rs  tokens.rs
shared/elusiv-utils/: Cargo.toml
shared/elusiv-utils/src/: error.rs  lib.rs  macros.rs
src/: bytes.rs  commitment.rs  entrypoint.rs  error.rs  fee.rs  fields.rs  instruction.rs  lib.rs  macros.rs  map.rs  merkle.rs  mt.rs  pool.rs  poseidon.rs  poseidon_constants.rs  processor.rs  proof.rs  queue.rs  scalar.rs  state.rs  storage_account.rs  token.rs  types.rs  verifier.rs
src/commitment/: commitment.rs  mod.rs  poseidon_constants.rs  poseidon_hash.rs  state.rs
src/fields/: base.rs  mod.rs  scalar.rs  utils.rs
src/groth16/: final_exponentiation.rs  lazy_stack.rs  miller_loop.rs  mod.rs  prepare.rs  prepare_inputs.rs  prepare_proof.rs  proof.rs  state.rs  unused.rs  verify.rs  vkey.rs
src/poseidon/: mod.rs  poseidon_constants.rs  poseidon_hash.rs  scalar.rs  state.rs
src/processor/: accounts.rs  client.rs  commitment.rs  merge.rs  mod.rs  node.rs  process.rs  proof.rs  request.rs  send.rs  store.rs  transfer.rs  utils.rs
src/proof/: final_exponentiation.rs  lazy_stack.rs  miller_loop.rs  mod.rs  precompute.rs  prepare_inputs.rs  proof.rs  ram.rs  state.rs  test_proofs.rs  verification_key.rs  verifier.rs  verify.rs  vkey.rs  vkey_send.rs
src/proof/vkey/: mod.rs  vkey_bind.rs  (+5 more)
src/queue/: mod.rs  proof_request.rs  ring_queue.rs  send_finalization_request.rs  state.rs
src/state/: archive.rs  fee.rs  governor.rs  mod.rs  nullifier.rs  pool.rs  program_account.rs  queue.rs  reserve.rs  storage.rs  tree.rs
tests/: accounts.rs  commitment.rs  common.rs  deposit_test.rs  setup.rs  store.rs  test_groth16.rs  test_proof.rs  verification.rs  withdraw_test.rs
tests/common/: accounts.rs  common.rs  cu.rs  deposit.rs  log.rs  mod.rs  program.rs  program_setup.rs  proof.rs  store.rs  utils.rs  withdraw.rs
(+1 files in other folders)
