[package]
name = "elusiv"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/elusiv-privacy/elusiv"

[workspace]
members = [
    "elusiv-derive",
    "elusiv-proc-macros",
    "elusiv-interpreter",
    "elusiv-computation",
    "elusiv-utils",
]

[features]
instruction-abi = []
precomputing = []

devnet = []
logging = []
no-entrypoint = []

test-bpf = []
test-elusiv = ["bytemuck"]

[dependencies]
elusiv-interpreter = { path = "./elusiv-interpreter" }
elusiv-derive = { path = "./elusiv-derive" }
elusiv-proc-macros = { path = "./elusiv-proc-macros" }
elusiv-computation = { path = "./elusiv-computation" }

solana-program = "=1.10.39"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
pyth-sdk-solana = "=0.4.2"

static_assertions = "1.1.0"
borsh = { version = "=0.9.3", features = ["const-generics"] }
bytemuck = { version = "1.7.2", optional = true }

ark-bn254 = "=0.3.0"
ark-ff = { version = "=0.3.0", default-features = false }
ark-ec = { version = "=0.3.0", default-features = false }

[dev-dependencies]
elusiv = { path = ".", features = ["instruction-abi", "test-elusiv", "logging", "precomputing"] }
elusiv-utils = { path = "./elusiv-utils", features = ["sdk"] }

solana-program-test = "=1.10.39"
solana-sdk = "=1.10.39"

regex = "1.5.6"
rand = "0.8.5"

assert_matches = "1.5.0"
ark-groth16 = { version = "=0.3.0", default-features = false }

[profile.test]
opt-level = 2

[lib]
name = "elusiv"
crate-type = ["cdylib", "lib"]