[package]
name = "elusiv-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
elusiv-computation = { path = "./../elusiv-computation", features = ["compute-unit-optimization"] }
elusiv-utils = { path = "./../elusiv-utils" }
syn = { version="1.0.89", features=["full", "fold"] }
quote = "1.0.16"
proc-macro2 = "1.0.36"
regex = "1.5.5"

[dev-dependencies]
prettyplease = "0.1.10"

[lib]
proc-macro = true