[package]
name = "elusiv-proc-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
elusiv-computation = { path = "./../elusiv-computation", features = ["compute-unit-optimization"] }
syn = { version = "1.0.89", features = ["full", "fold"] }
quote = "1.0.16"
proc-macro2 = "1.0.36"

[lib]
proc-macro = true