[package]
name = "elusiv-warden-network"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "shared/elusiv-derive",
    "shared/elusiv-proc-macros",
    "shared/elusiv-types",
    "shared/elusiv-utils",
]
exclude = [
    "shared/elusiv-test"
]

[features]
mainnet = [
    "elusiv-proc-macros/mainnet",
    "elusiv-types/mainnet",
]
devnet = [
    "elusiv-proc-macros/devnet",
    "elusiv-types/devnet",
]

elusiv-client = ["elusiv-types/elusiv-client"]
no-entrypoint = []
logging = []

test-bpf = []
test-elusiv = ["elusiv-types/test-elusiv"]
test-unit = ["elusiv-utils/test-unit"]

[dependencies]
borsh = { version = "=0.9.3", features = ["const-generics"] }
elusiv-types = { path = "shared/elusiv-types" }
elusiv-utils = { path = "shared/elusiv-utils" }
elusiv-derive = { path = "shared/elusiv-derive" }
elusiv-proc-macros = { path = "shared/elusiv-proc-macros" }
solana-program = "1.10"

[dev-dependencies]
elusiv-test = { path = "shared/elusiv-test" }
elusiv-warden-network = { path = ".", features = ["elusiv-client", "test-elusiv", "logging"] }
solana-program-test = "1.10"

[profile.test]
opt-level = 2

[lib]
name = "elusiv_warden_network"
crate-type = ["cdylib", "lib"]