[package]
name = "elusiv-warden-network"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "shared/elusiv-derive",
    "shared/elusiv-proc-macros",
    "shared/elusiv-proc-macro-utils",
    "shared/elusiv-types",
    "shared/elusiv-utils",
]
exclude = [
    "shared/elusiv-test"
]

[features]
mainnet = [
    "elusiv-derive/mainnet",
    "elusiv-proc-macros/mainnet",
    "elusiv-types/mainnet",
]
devnet = [
    "elusiv-derive/devnet",
    "elusiv-proc-macros/devnet",
    "elusiv-types/devnet",
]

elusiv-client = ["elusiv-types/elusiv-client"]
no-entrypoint = []
logging = []

test-bpf = []
test-elusiv = ["elusiv-types/test-elusiv"]
test-unit = ["elusiv-utils/test-unit"]

[dependencies]
borsh = { version = "=0.9.3", features = ["const-generics"] }
default-env = "0.1.1"
elusiv-types = { path = "shared/elusiv-types", default-features = false, features = ["accounts", "bytes", "tokens"] }
elusiv-utils = { path = "shared/elusiv-utils" }
elusiv-derive = { path = "shared/elusiv-derive" }
elusiv-proc-macros = { path = "shared/elusiv-proc-macros" }
solana-program = "1.10"
solana-security-txt = "1.0.1"
spl-token = { version = "3.5", features = ["no-entrypoint"] }

[dev-dependencies]
assert_matches = "1.5.0"
async-trait = "0.1"
chrono = "0.4"
elusiv-test = { path = "shared/elusiv-test" }
elusiv-warden-network = { path = ".", features = ["elusiv-client", "test-elusiv", "logging", "no-entrypoint"] }
solana-program-test = "1.10"
solana-sdk = "1.10"
mock-program = { path = "shared/elusiv-test/mock-program", features = ["no-entrypoint"] }

[profile.test]
opt-level = 2

[lib]
name = "elusiv_warden_network"
crate-type = ["cdylib", "lib"]