[package]
name = "elusiv"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "shared/elusiv-computation",
    "shared/elusiv-derive",
    "elusiv-interpreter",
    "shared/elusiv-proc-macros",
    "shared/elusiv-proc-macro-utils",
    "shared/elusiv-types",
    "shared/elusiv-utils",
]
exclude = [
    "shared/elusiv-test"
]

[features]
mainnet = [
    "elusiv-proc-macros/mainnet",
    "elusiv-types/mainnet",
]
devnet = [
    "elusiv-proc-macros/devnet",
    "elusiv-types/devnet",
]

elusiv-client = ["elusiv-types/elusiv-client"]
no-entrypoint = []
logging = []

test-bpf = []
test-elusiv = ["elusiv-types/test-elusiv"]
test-unit = ["elusiv-utils/test-unit"]

[dependencies]
elusiv-computation = { path = "shared/elusiv-computation" }
elusiv-derive = { path = "shared/elusiv-derive" }
elusiv-interpreter = { path = "elusiv-interpreter" }
elusiv-proc-macros = { path = "shared/elusiv-proc-macros" }
elusiv-types = { path = "shared/elusiv-types", default-features = false, features = ["bytes", "accounts", "tokens"] }
elusiv-utils = { path = "shared/elusiv-utils" }

solana-program = "1.10"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }

static_assertions = { version = "1.1.0", optional = true }
borsh = { version = "=0.9.3", features = ["const-generics"] }
serde = { version = "1.0.85", features = ["derive"], optional = true }

ark-bn254 = "=0.3.0"
ark-ff = { version = "=0.3.0", default-features = false }
ark-ec = { version = "=0.3.0", default-features = false }

[dev-dependencies]
ark-groth16 = { version = "=0.3.0", default-features = false }
assert_matches = "1.5.0"
elusiv = { path = ".", features = ["static_assertions", "elusiv-client", "test-elusiv", "logging", "serde"] }
elusiv-utils = { path = "shared/elusiv-utils", features = ["sdk"] }
elusiv-test = { path = "shared/elusiv-test" }
num = "0.4"
rand = "0.8.5"
regex = "1.5.6"
serde_json = "1.0.87"
solana-program-test = "1.10"
solana-sdk = "1.10"
spl-memo = "3.0.1"

[profile.test]
opt-level = 2

[lib]
name = "elusiv"
crate-type = ["cdylib", "lib"]