[package]
name = "elusiv"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "shared/elusiv-computation",
    "shared/elusiv-derive",
    "elusiv-interpreter",
    "shared/elusiv-proc-macros",
    "shared/elusiv-proc-macro-utils",
    "shared/elusiv-types",
    "shared/elusiv-utils",
]
exclude = [
    "shared/elusiv-test"
]

[features]
mainnet = [
    "elusiv-proc-macros/mainnet",
    "elusiv-types/mainnet",
]
devnet = [
    "elusiv-proc-macros/devnet",
    "elusiv-types/devnet",
]

elusiv-client = ["elusiv-types/elusiv-client"]
no-entrypoint = []
logging = []

test-bpf = []
test-elusiv = ["elusiv-types/test-elusiv"]
test-unit = ["elusiv-utils/test-unit"]

[dependencies]
ark-bn254 = "=0.3.0"
ark-ec = { version = "=0.3.0", default-features = false }
ark-ff = { version = "=0.3.0", default-features = false }
borsh = { version = "=0.9.3", features = ["const-generics"] }
default-env = "0.1.1"
elusiv-computation = { path = "shared/elusiv-computation" }
elusiv-derive = { path = "shared/elusiv-derive" }
elusiv-interpreter = { path = "elusiv-interpreter" }
elusiv-proc-macros = { path = "shared/elusiv-proc-macros" }
elusiv-types = { path = "shared/elusiv-types", default-features = false, features = ["bytes", "accounts", "tokens"] }
elusiv-utils = { path = "shared/elusiv-utils" }
serde = { version = "1.0.85", features = ["derive"], optional = true }
solana-program = "1.10"
solana-security-txt = "1.0.1"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5", features = ["no-entrypoint"] }

[dev-dependencies]
ark-groth16 = { version = "=0.3.0", default-features = false }
elusiv = { path = ".", features = ["elusiv-client", "test-elusiv", "logging", "serde", "no-entrypoint"] }
elusiv-utils = { path = "shared/elusiv-utils", features = ["sdk"] }
elusiv-test = { path = "shared/elusiv-test" }
num = "0.4"
rand = "0.8.5"
regex = "1.5.6"
serde_json = "1.0.87"
solana-program-test = "1.10"
solana-sdk = "1.10"
spl-memo = "3.0.1"
static_assertions = { version = "1.1.0"}

[profile.test]
opt-level = 2

[lib]
name = "elusiv"
crate-type = ["cdylib", "lib"]