[package]
name = "elusiv-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
elusiv-computation = { path = "../shared/elusiv-computation", features = ["compute-unit-optimization"] }
elusiv-utils = { path = "../shared/elusiv-utils", features = ["computation"] }
proc-macro2 = "1.0.36"
quote = "1.0.16"
regex = "1.5.5"
syn = { version="1.0.89", features=["full", "fold"] }

[dev-dependencies]
prettyplease = "0.1.10"

[lib]
proc-macro = true