[package]
name = "elusiv-proc-macro-utils"
version = "0.1.0"
edition = "2021"

[features]
mainnet = []
devnet = []

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0.89", features = ["full", "fold"] }
solana-program = "1.10"
toml = "0.5.9"