[package]
name = "elusiv-proc-macros"
version = "0.1.0"
edition = "2021"

[features]
mainnet = ["elusiv-proc-macro-utils/mainnet"]
devnet = ["elusiv-proc-macro-utils/devnet"]

[dependencies]
elusiv-computation = { path = "./../elusiv-computation", features = ["compute-unit-optimization"] }
elusiv-proc-macro-utils = { path = "./../elusiv-proc-macro-utils" }
proc-macro2 = "1.0.36"
quote = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0.89", features = ["full", "fold"] }
toml = "0.5.9"

[lib]
proc-macro = true