[package]
name = "elusiv-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
elusiv-types = { path = "./../elusiv-types" }
elusiv-utils = { path = "./../elusiv-utils", features = ["sdk"] }

solana-program = "1.10"
solana-program-test = "1.10"
solana-sdk = "1.10"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
pyth-sdk-solana = "=0.4.2"

borsh = { version = "=0.9.3", features = ["const-generics"] }
bytemuck = { version = "1.7.2", optional = true }

ark-bn254 = "=0.3.0"
ark-ff = { version = "=0.3.0", default-features = false }
ark-ec = { version = "=0.3.0", default-features = false }

regex = "1.5.6"
rand = "0.8.5"
assert_matches = "1.5.0"