[package]
name = "elusiv-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
elusiv-types = { path = "../elusiv-types", default-features = false, features = ["bytes", "accounts", "tokens"] }
rand = "0.8.5"
solana-program = "1.10"
solana-program-test = "1.10"
solana-sdk = "1.10"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }