[package]
name = "elusiv-utils"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
sdk = ["solana-program", "solana-sdk"]

[dependencies]
elusiv-computation = { path = "./../elusiv-computation" }

solana-program = { version = "=1.10.39", optional = true }
solana-sdk = { version = "=1.10.39", optional = true }