[package]
name = "elusiv-utils"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
computation = [
    "elusiv-computation"
]
sdk = [
    "solana-sdk",
    "elusiv-computation",
]
test-unit = []

[dependencies]
elusiv-types = { path = "./../elusiv-types", default-features = false, features = ["bytes", "accounts"] }
elusiv-computation = { path = "./../elusiv-computation", optional = true }

solana-program = { version = "1.10" }
solana-sdk = { version = "1.10", optional = true }